# 2d-fluid-simulator

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: compiler_settings.default.cmake  compiler_settings.sample.cmake
docs/: configuration.md
inc/: config.hpp  config_parser.hpp  fluid.cuh  graphics_handler.cuh  helper.cuh
src/: config_parser.cpp  fluid.cu  graphics_handler.cu  helper.cu  logger.cpp  main.cu
